# cat-study-rust

./: .gitignore  README.md
algo-study/: Cargo.toml
algo-study/array/: Cargo.toml
algo-study/array/src/: array.rs  array_generic.rs  lib.rs
algo-study/leetcode/examples/: day_23_10_08.rs  day_23_10_09.rs  day_23_10_09_2.rs  day_23_10_10.rs
algo-study/linked-list/src/: lib.rs  linked_list.rs  linked_list_first.rs  (+4 more)
cbindgen-study-01/: Cargo.toml  my_header3.h
cbindgen-study-01/src/: lib.rs
design-patterns/: Cargo.toml
design-patterns/_212_privacy_for_extensibility/: Cargo.toml
design-patterns/c_ffi/: exe  main.c  makefile
design-patterns/ffi_err/: Cargo.toml
ffi-study/: Cargo.toml
ffi-study/rust-call-c-static/: Cargo.toml  build.rs
ffi-study/rust-call-c-std/: Cargo.toml  build.rs
string-study/: Cargo.toml
string-study/examples/: 01_unicode_utf8.rs  02_str_prosess.rs  03_string_find.rs  04_string_matches.rs  0x_replace.rs
study-protobuf-use-01/: Cargo.toml  build.rs
study-protobuf-use-01/src/: lib.rs  main.rs
study-protobuf-use-02/: Cargo.toml  build.rs
study-protobuf-use-02/proto/: person.proto
study-protobuf-use-03/: Cargo.toml
study-protobuf-use-04/: Cargo.toml
study-protobuf-use-05/: Cargo.toml  build.rs
study-protobuf-use-05/examples/: encode.rs
study-protobuf-use-05/proto/: person.proto
study-protobuf-use-05/src/proto_model/: protopackage.rs
study-protobuf-use-06/: Cargo.toml  build.rs
study-protobuf-use-06/examples/: json.rs
study-protobuf-use-06/proto/: person.proto
study-protobuf-use-06/src/: lib.rs  main.rs
(+33 files in other folders)
