[package]
name = "study-protobuf-use-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
anyhow = "1"
bytes = "1"
serde = {version = "1", features = ["derive"]}
serde-json = "1"

[build-dependencies]
prost-build = "0.12"
